[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi_auth_sqlalchemy_models"
version = "0.0.1"
authors = [
    { name = "zayycev22" },
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "typing-extensions",
    "greenlet >= 3.0.0",
    "sqlalchemy >= 2.0.0"
]
description = "Sqlalchemy repositories and models for fastapi-auth library"
requires-python = ">=3.10"